# AI-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  start_db.sh  start_server.py
agent/: main.py
agent/core/: __init__.py
agent/prompts/: 01_think.md  03_act.md  04_reflect.md
agent/skills/: excel-automation  skills-lock.json  word-document-processor
agent/skills/skills/: financial-calculator  ocr-document-processor
agent/tools/builtin/: file_list.py  web_search.py
api/: main.py
api/core/: config.py  dependencies.py  error_handlers.py  logger.py
api/db/: base.py  engine.py  models.py
api/db/repositories/: redis_session.py  session.py  user.py  user_memory.py
api/repositories/: session.py  user.py  user_memory.py
api/router/: agent.py  auth.py  redis_sessions.py  sessions.py  users.py
api/schemas/: __init__.py  auth.py  response.py  session.py  user.py
api/services/: agent.py  redis_service.py  session_service.py  user.py  user_memory_service.py
api/utils/: __init__.py  jwt.py  security.py
docs/: ARCHITECTURE.md
front/: README.md  package.json  vite.config.js
front/src/views/: Index.vue  LLM-Chat.vue
server/: main.py  requirements.txt
server/agent/: chat_agent.py
server/controller/: chat_controller.py
server/router/: router.py
server/utils/: logger.py  schemas.py
src/: main.py
src/agent/: main.py
src/agent/core/: agent.py  llm.py
src/agent/prompts/: 01_think.md  02_plan.md  03_act.md  04_reflect.md
src/agent/skills/: ocr-document-processor  pdf
src/api/: main.py
src/router/: index.js
src/views/: Index.vue  LLM-Chat.vue
(+30 files in other folders)
