[project]
name = "agent"
version = "0.1.0"
description = "ReAct Agent Framework - A modular Agent framework implementing the ReAct pattern"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
]
