[project]
name = "agent"
version = "0.1.0"
description = "ReAct Agent Framework - A modular Agent framework implementing the ReAct pattern"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "fastapi[standard]>=0.135.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "redis>=7.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
]