[project]
name = "agent"
version = "0.1.0"
description = "ReAct Agent Framework - A modular Agent framework implementing ReAct pattern"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "pydantic[sqlalchemy]>=0.3.0",
    "fastapi[standard]>=0.135.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiomysql>=0.2.0",
    "sqlmodel>=0.0.22",
    "redis>=5.0.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
]
